Completed UI and functionality integration of both Home page and Maps page

--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "track_location_on_map_by_device_id_and_sensor_id",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://rkant225.github.io/Distronix_Assignment_Live_Device_Tracking",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-google-maps": "^9.4.5",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
